--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,17 +5,18 @@ x-logging: &default-logging
     max-file: "4"
 
 services:
-
   ibis:
-    image: nutomic/ibis:{version}
+    image: nutomic/ibis:0.3.0
     ports:
-      - "127.0.0.1:3000:3000"
+      - "3000:3000"
     restart: always
     logging: *default-logging
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
-      - ./config.toml:/config.toml:Z
+      - type: bind
+        source: ./config.toml
+        target: /config.toml
     depends_on:
       - postgres
 
@@ -24,10 +25,13 @@ services:
     restart: always
     environment:
       - POSTGRES_USER=ibis
-      - POSTGRES_PASSWORD={your-db-password}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=ibis
     volumes:
-      - ./volumes/postgres:/var/lib/postgresql/data:Z
+      - type: bind
+        source: ./volumes/postgres
+        target: /var/lib/postgresql/data
+        is_directory: true
     logging: *default-logging
 
   postfix:
