--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
       - type: bind
-        source: ./config.toml
+        source: ../config.toml
         target: /config.toml
     depends_on:
       - postgres
