--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,3 +13,7 @@ services:
     logging: *default-logging
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
+    volumes:
+      - type: bind
+        source: ../config.toml
+        target: /app/config.toml
