--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,26 +14,7 @@ services:
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
-      - type: bind
-        source: ./config.toml
-        target: /app/config.toml
-        content: |
-          # See here for all options and documentation:
-          # https://github.com/Nutomic/ibis/blob/master/config/defaults.toml
-
-          [federation]
-          domain = "${FEDERATION_DOMAIN}"
-
-          [database]
-          connection_url = "postgres://ibis:${POSTGRES_PASSWORD}@postgres:5432/ibis"
-
-          [setup]
-          admin_username = "${ADMIN_USERNAME}"
-          admin_password = "${ADMIN_PASSWORD}"
-
-          [email]
-          connection_url = "smtp://postfix:25"
-          from_address = "${EMAIL_FROM}"
+      - ./config/config.toml:/app/config.toml
     depends_on:
       - postgres
 
