--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,11 +10,12 @@ services:
     ports:
       - "3000:3000"
     restart: always
+    working_dir: /
     logging: *default-logging
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
-      - ./config/config.toml:/app/config.toml
+      - ${PWD}/config/config.toml:/config.toml
     depends_on:
       - postgres
 
