--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,4 +15,5 @@ services:
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
-      - ${PWD}/config/config.toml:/config.toml
+      - ./config/config.toml:/config.toml
+      - ./config/config.toml:/app/config.toml
