fix: use Dockerfile
# [optional body]

# [optional footer(s)]

# type: feat|fix|docs|style|refactor|test|chore|perf|ci|build|revert
# scope: The scope could be anything specifying place of the commit change
# description: description in present tense. Not capitalized. No period at the end

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,9 @@ x-logging: &default-logging
 
 services:
   ibis:
-    build: .
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - "3000:3000"
     restart: always
