--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,12 +6,13 @@ x-logging: &default-logging
 
 services:
   ibis:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: nutomic/ibis:0.3.0
     ports:
       - "3000:3000"
     restart: always
     logging: *default-logging
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
+    volumes:
+      - ./config.toml:/my-config.toml
+    command: ["ibis", "--config", "/my-config.toml"]
