--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,30 +7,26 @@ x-logging: &default-logging
 services:
 
   ibis:
-    image: nutomic/ibis:{version}
+    image: nutomic/ibis:0.3.0
     ports:
-      - "127.0.0.1:3000:3000"
+      - "3000:3000"
     restart: always
     logging: *default-logging
     environment:
       - LEPTOS_SITE_ADDR=0.0.0.0:3000
     volumes:
       - ./config.toml:/config.toml:Z
-    depends_on:
-      - postgres
-
-  postgres:
-    image: docker.io/pgautoupgrade/pgautoupgrade:16-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=ibis
-      - POSTGRES_PASSWORD={your-db-password}
-      - POSTGRES_DB=ibis
-    volumes:
-      - ./volumes/postgres:/var/lib/postgresql/data:Z
-    logging: *default-logging
+    networks:
+      default: {}
+      coolify:
+        aliases:
+          - postgres
 
   postfix:
-    image: docker.io/mwader/postfix-relay
-    restart: always
-    logging: *default-logging
+     image: docker.io/mwader/postfix-relay
+     restart: always
+     logging: *default-logging
+
+networks:
+  coolify:
+     external: true
